# kpublictransport

./: .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CMakePresets.json  KPublicTransportConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  accessibilitycloudtest.cpp  backendtest.cpp  cachetest.cpp  countryboundingboxtest.cpp  coveragecountrymodeltest.cpp  departuretest.cpp  deutschebahnparsertest.cpp  deutschebahntest.cpp  efaparsertest.cpp  efarequesttest.cpp  featuretest.cpp  gbfsreadertest.cpp  gbfstest.cpp  hafasmgateparsertest.cpp  hafasmgaterequesttest.cpp  hafasparsertest.cpp  hafasqueryparsertest.cpp  hafasvehiclelayoutparsertest.cpp  ifopttest.cpp  indexeddatatabletest.cpp  ivvassparsertest.cpp  journeyrequesttest.cpp  journeytest.cpp  jsonpointertest.cpp  jsonptest.cpp  jsontest.cpp  kgraphqlminimizertest.cpp  levelparsertest.cpp  linemetadatatest.cpp  linetest.cpp  locationhistorymodeltest.cpp  locationtest.cpp  mapcssparsertest.cpp  mapleveltest.cpp  mapviewtest.cpp  marblegeometryassemblertest.cpp  mergeutiltest.cpp  mocknetworkaccessmanager.cpp  mocknetworkaccessmanager.h  (+32 more)
src/: CMakeLists.txt  Messages.sh  departurereply.cpp  departurereply.h  departurerequest.cpp  departurerequest.h  internal_impl.h  journeyreply.cpp  journeyreply.h  journeyrequest.cpp  journeyrequest.h  journeyrequestcontext.cpp  journeyrequestcontext_p.h  locationreply.cpp  locationreply.h  locationrequest.cpp  locationrequest.h  manager.cpp  manager.h  pointer_helper_p.h  reply.cpp  reply.h  reply_p.h  requestcontext.cpp  requestcontext_p.h  vehiclelayoutreply.cpp  vehiclelayoutreply.h  vehiclelayoutrequest.cpp  vehiclelayoutrequest.h
src/backends/: abstractbackend.cpp  abstractbackend.h  cache.cpp  cache.h  deutschebahnbackend.cpp  deutschebahnvehiclelayoutparser.cpp  deutschebahnvehiclelayoutparser.h  efabackend.cpp  efabackend.h  efacompactparser.cpp  efacompactparser.h  efaparser.cpp  efaparser.h  efaxmlparser.cpp  efaxmlparser.h  hafasbackend.cpp  hafasbackend.h  hafasjourneyresponse_p.h  hafasmgatebackend.cpp  hafasmgatebackend.h  hafasmgateparser.cpp  hafasmgateparser.h  hafasparser.cpp  hafasparser.h  hafasquerybackend.cpp  hafasquerybackend.h  hafasqueryparser.cpp  hafasqueryparser.h  navitiabackend.cpp  navitiabackend.h  navitiaparser.cpp  navitiaparser.h  scopedxmlstreamreader.h
src/coverage/: public_transport_coverage.geojson  public_transport_coverage.qgs
src/datatypes/: attribution.cpp  attribution.h  attributionutil.cpp  attributionutil_p.h  backend.cpp  backend.h  datatypes.h  datatypes_p.h  departure.cpp  departure.h  departureutil.cpp  departureutil_p.h  disruption.cpp  disruption.h  journey.cpp  journey.h  journeyutil.cpp  journeyutil_p.h  json.cpp  line.cpp  line.h  location.cpp  location.h  locationutil.cpp  locationutil_p.h  mergeutil.cpp  mergeutil_p.h  notesutil.cpp  notesutil_p.h  platform.cpp  platform.h  platformutils.cpp  platformutils_p.h  vehicle.cpp  vehicle.h
src/generator/: CMakeLists.txt  Makefile.planet-osm  generator.cpp  generator.qrc  indexeddatatable.cpp  indexeddatatable.h  lineinfo.cpp  lineinfo.h  routes.overpassql  stringtable.cpp  stringtable.h
src/graphql/: CMakeLists.txt  kgraphql.cpp  kgraphql.h  kgraphqlminimizer.cpp  kgraphqlminimizer_p.h  kgraphqlpreprocessor.cpp  kgraphqlpreprocessor_p.h
src/lib/: CMakeLists.txt  assetrepository.cpp  assetrepository_p.h  departurereply.cpp  departurereply.h  departurerequest.cpp  departurerequest.h  journeyreply.cpp  journeyreply.h  journeyrequest.cpp  journeyrequest.h  locationreply.cpp  locationreply.h  locationrequest.cpp  locationrequest.h  manager.cpp  manager.h  org_kde_kpublictransport.categories  pointer_helper_p.h  reply.cpp  reply.h  reply_p.h  requestcontext.cpp  requestcontext_p.h  standardpaths.cpp  standardpaths_p.h  stopoverreply.cpp  stopoverreply.h  stopoverrequest.cpp  stopoverrequest.h  tripreply.cpp  tripreply.h  triprequest.cpp  triprequest.h  vehiclelayoutreply.cpp  vehiclelayoutreply.h  vehiclelayoutrequest.cpp  vehiclelayoutrequest.h
src/map/: CMakeLists.txt  org_kde_kosmindoormap.categories
src/map-publictransport-integration/: CMakeLists.txt  kosmindoormap-kpublictransport-integration.cpp  kosmindoormap-kpublictransport-integration.h  locationqueryoverlayproxymodel.cpp  locationqueryoverlayproxymodel.h  qmldir
src/map-quick/: CMakeLists.txt  IndoorMap.qml  IndoorMapAttributionLabel.qml  IndoorMapScale.qml  floorlevelchangemodel.cpp  floorlevelchangemodel.h  floorlevelmodel.cpp  floorlevelmodel.h  kosmindoormapquickplugin.cpp  kosmindoormapquickplugin.h  mapitem.cpp  mapitem.h  osmaddress.cpp  osmaddress.h  osmelement.cpp  osmelement.h  osmelementinformationmodel.cpp  osmelementinformationmodel.h  osmelementinformationmodel_data.cpp  osmelementinformationmodel_p.h  qmldir
src/models/: abstractquerymodel.cpp  abstractquerymodel.h  abstractquerymodel_p.h  backendmodel.cpp  backendmodel.h  departurequerymodel.cpp  departurequerymodel.h  journeyquerymodel.cpp  journeyquerymodel.h  locationquerymodel.cpp  locationquerymodel.h  vehiclelayoutquerymodel.cpp  vehiclelayoutquerymodel.h
src/networks/: NOTES  at_3_vor.json  at_4_linz.json  at_4_ooevv.json  at_5_svv.json  at_6_vvst.json  at_7_vvt.json  at_8_vvv.json  (+43 more)
tests/: AttributionSheet.qml  BackendPage.qml  CMakeLists.txt  CoordinatePicker.qml  FeatureDelegate.qml  IndoorMapPage.qml  JourneyMapPage.qml  JourneySectionMap.qml  JourneySectionMapPage.qml  JourneySectionPage.qml  JourneySectionStopDelegate.qml  LocationDetailsSheet.qml  PathPage.qml  StopoverDetailsPage.qml  TestLocationsModel.qml  TripPage.qml  VehicleLayoutPage.qml  departurequery.cpp  departurequery.qml  departurequery.qrc  exampleutil.h  expectedtimelabeltest.qml  fake-onboard.json  gbfsdiscover.cpp  graphql-cli.cpp  indoormap.cpp  indoormap.qml  journey-section-bar-test.qml  journeyquery.cpp  journeyquery.qml  journeyquery.qrc  locationcompleter.cpp  locationpicker.qml  locationquery.cpp  locationquery.qml  locationquery.qrc  onboard.qml  overpassql-cli.cpp  platformlabels.qml  pureqmltest.qml  (+2 more)
(+1210 files in other folders)
