# SPDX-FileCopyrightText: 2018 Volker Krause <vkrause@kde.org>
# SPDX-License-Identifier: BSD-3-Clause

add_subdirectory(graphql)
add_subdirectory(osm)
add_subdirectory(wikidata)
if (NOT CMAKE_CROSSCOMPILING)
    add_subdirectory(generator)
endif()
add_subdirectory(lib)
if (BISON_FOUND AND FLEX_FOUND)
    add_subdirectory(map)
endif()
if (TARGET KOSMIndoorMap AND TARGET Qt5::Quick)
    add_subdirectory(map-quick)
    add_subdirectory(map-publictransport-integration)
endif()
add_subdirectory(qmlplugin)
if (TARGET Qt5::Quick)
    add_subdirectory(quick)
endif()
if (NOT CROSS_COMPILING)
    add_subdirectory(tools)
endif()
